# contract_ai

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_Codex.md  ContractAI-Start.bat  ContractAI-Start.local.bat  ContractAI-Watch-Tests.local.ps1  HARD_RESET_AND_REGISTER.ps1  INVENTORY.md  MANIFEST.in  MIGRATION.md  Makefile  Master Agreement - Services and Associated Goods (1) — копия.docx  README.md  RUN.ps1  RUN_DEV.ps1  RUN_DEV_ADMIN.ps1  RUN_DOCTOR.bat  RUN_DOCTOR.ps1  Run_Contract_AI.cmd  STEP1_CLEAN_START.bat  STEP1_CLEAN_START.ps1  STEP2_BACKEND_FRONT.bat  STEP2_BACKEND_FRONT.ps1  STEP3_OPEN_WORD.bat  STEP3_OPEN_WORD.ps1  STOP.ps1  Start-ContractAI.ps1  Start_ContractAI.cmd  analyze_req.json  analyze_req_doctor.json  bump_build.py  clause_parser.py  cli.py  codex_payload_hits.txt  (+43 more)
.github/: CODEOWNERS  pull_request_template.md
.sanitizer/: duplicates.json  inventory.json  keep_plan.json  tree.txt
_deprecated/: ContractAI-Start.local.bat  RUN_DEV_ADMIN.ps1  Start-ContractAI.bat  Start-ContractAI.ps1  Start_ContractAI.ps1  serve_https_panel.py
_shared_catalog/: .catalog_guid  .gitignore
api/: openapi.json
certs/: dev.crt  dev.key
config/: retrieval.yaml
contract_review_app/: .coveragerc  check_rule_return_types.py  config.py  conftest.py  contract.docx  debug_rule_return_type.py  disagreement_protocol.py  document_checker.py  fix_indentation_app.py  fix_indents.py  generate_report.py  pytest.ini  reportpdf.py  setup.cfg  suggest.py  trace_artifacts.py  types_trace.py  (+1 more)
(+1511 files in other folders)
